[package]
name = "rindex"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1

[dependencies]
argh = "0.1.10"
spdlog-rs = "0.3.13"
httpdate = "1.0.2"
sonic-rs = "0.3.5"
rayon = "1.7.0"
safe-path = "0.1.0"
anyhow = "1.0.82"
async-std = "1.12.0"
rand = "0.8.5"
thiserror = "1.0.61"

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.snowboard]
version = "1.0.3"
features = ["async"]
