[package]
name = "rindex"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1

[dependencies]
argh = "0.1.13"
spdlog-rs = "0.4.1"
httpdate = "1.0.3"
sonic-rs = "0.3.17"
rayon = "1.10.0"
anyhow = "1.0.97"
async-std = "1.13.0"
thiserror = "2.0.12"
snmalloc-rs = "0.3.7"

[dependencies.serde]
version = "1.0.218"
features = ["derive"]

[dependencies.snowboard]
version = "1.0.3"
features = ["async"]
